# Backend-Copyrightforever

./: .env.example  .gitignore  Readme.md  pyproject.toml  user_data.json
.github/workflows/: dev.yml
copyrightforever/: 0.2b1  data.json  db.sqlite3
copyrightforever/copyrightforever/: .env  api.py  asgi.py  settings.py  wsgi.py
copyrightforever/forms/: admin.py  api.py  serializers.py
copyrightforever/forms/migrations/: 0001_initial.py  0002_auto_20210528_1620.py  0005_alter_virtualartworkform_year.py  0010_auto_20210616_2102.py
copyrightforever/pdf/: views.py
copyrightforever/pdf/templates/: pa.html  va.html
copyrightforever/transaction/: models.py
copyrightforever/user/: models.py  urls.py
copyrightforever/user/migrations/: 0002_auto_20210214_1648.py
copyrightforever/userprofile/: models.py  views.py
copyrightforever/userprofile/migrations/: 0001_initial.py  0002_awein_natureofauthorship.py  0003_auto_20210216_1800.py
scripts/: copyrightforever.sh
src/: manage.py
src/copyrightforever/: api.py  asgi.py  settings.py  urls.py  wsgi.py
src/forms/: models.py  views.py
src/forms/migrations/: 0003_auto_20210528_1624.py  0004_auto_20210528_2032.py  0006_auto_20210529_1901.py  0007_auto_20210530_1346.py  0008_auto_20210530_1353.py  0009_auto_20210616_2030.py
src/pdf/: urls.py
src/pdf/templates/: se.html  sr.html  tx.html
src/transaction/: admin.py
src/transaction/migrations/: 0001_initial.py
src/user/: admin.py  serializers.py
src/user/migrations/: 0001_initial.py
src/userprofile/: admin.py  api.py  serializers.py
